// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`delete() compile: query-http 1`] = `"DELETE $bind__3 RETURN DIFF TIMEOUT 1s"`;

exports[`delete() compile: bindings-http 1`] = `
{
  "bind__3": Table {
    [Symbol(surrealdb.Table)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;

exports[`delete() compile: query-ws 1`] = `"DELETE $bind__4 RETURN DIFF TIMEOUT 1s"`;

exports[`delete() compile: bindings-ws 1`] = `
{
  "bind__4": Table {
    [Symbol(surrealdb.Table)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;

exports[`delete() compile: query-mem 1`] = `"DELETE $bind__3 RETURN DIFF TIMEOUT 1s"`;

exports[`delete() compile: bindings-mem 1`] = `
{
  "bind__3": Table {
    [Symbol(surrealdb.Table)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;
